--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/Users/tsungweiwu/Downloads/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/tsungweiwu/Downloads/gson-2.8.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
