--- a/csce247FinalProject/build.gradle
+++ b/csce247FinalProject/build.gradle
@@ -22,7 +22,9 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
 
-	implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'org.fusesource.jansi:jansi:1.18'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:28.0-jre'
