--- a/csce247FinalProject/build.gradle
+++ b/csce247FinalProject/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:28.0-jre'
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+   
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.1')
 }
